--- a/ml_recommender/notebooks/data_analysis.ipynb
+++ b/ml_recommender/notebooks/data_analysis.ipynb
@@ -1,8 +1,49 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['track_id', 'track_name', 'track_artist', 'lyrics', 'track_popularity',\n",
+      "       'track_album_id', 'track_album_name', 'track_album_release_date',\n",
+      "       'playlist_name', 'playlist_id', 'playlist_genre', 'playlist_subgenre',\n",
+      "       'danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness',\n",
+      "       'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo',\n",
+      "       'duration_ms', 'language'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv(\"../src/data/spotify_songs.csv\")\n",
+    "print(data.columns)"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
